--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-   
-    <script src="myscripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
