--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+<div id="main"></div>
     <script src="scripts.js"></script>
 </body>
 </html>
